conditions.Conditions.scala.code
if (estFaceMur():Boolean) {
    retourne()
  	avance();
  returne()
} else {
    avance();
}
